k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: landing-page 
  namespace: iwanidotdev 
  labels:
    app: landing-page
    component: web
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: landing-page 
    component: web
