k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: landing-page 
  namespace: iwanidotdev 
  labels:
    app: landing-page 
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: traefik
  rules:
  - host: www.iwani.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: landing-page 
            port:
              number: 80
